Adding additional state patterns to ensure double stop tests pass

--- a/text-casing.cabal
+++ b/text-casing.cabal
@@ -26,10 +26,8 @@ library
 
     exposed-modules:
           Data.Text.Case
+        , Data.Text.Case.Fusion
         , Data.Text.Lazy.Case
-
-    other-modules:
-          Data.Text.Case.Fusion
 
     build-depends:
           base >= 4.5 && < 5.0
