--- a/text-casing.cabal
+++ b/text-casing.cabal
@@ -27,11 +27,13 @@ library
     exposed-modules:
           Data.Text.Case
         , Data.Text.Case.Fusion
+        , Data.Text.Case.Types
         , Data.Text.Lazy.Case
 
     build-depends:
-          base >= 4.5 && < 5.0
-        , text >= 1.1 && < 1.3
+          base        >= 4.5 && < 5.0
+        , text        >= 1.1 && < 1.3
+        , text-format >= 0.3
 
 benchmark benchmarks
     type:              exitcode-stdio-1.0
