--- a/text-casing.cabal
+++ b/text-casing.cabal
@@ -26,9 +26,11 @@ library
 
     exposed-modules:
           Data.Text.Case
-        , Data.Text.Case.Fusion
         , Data.Text.Case.Types
         , Data.Text.Lazy.Case
+
+    other-modules:
+          Data.Text.Case.Fusion
 
     build-depends:
           base        >= 4.5 && < 5.0
