--- a/text-casing.cabal
+++ b/text-casing.cabal
@@ -1,7 +1,7 @@
-name:                  text-casing
+name:                  text-case-conversion
 version:               0.1.0
-synopsis:              Functions to modify the letter casing of single characters or the contents of text
-homepage:              https://github.com/brendanhay/text-casing
+synopsis:              Textual case conversion and word boundary manipulation
+homepage:              https://github.com/brendanhay/text-case-conversion
 license:               OtherLicense
 license-file:          LICENSE
 author:                Brendan Hay
@@ -13,11 +13,13 @@ extra-source-files:    README.md
 cabal-version:         >= 1.10
 
 description:
-    Pending
+    Manipulate programmatic identifiers and structurally non-complex pieces
+    of text by delimiting word boundaries via a combination of whitespace,
+    control-characters, and case-sensitivity.
 
 source-repository head
     type:     git
-    location: git://github.com/brendanhay/text-casing.git
+    location: git://github.com/brendanhay/text-case-conversion.git
 
 library
     default-language:  Haskell2010
@@ -46,8 +48,8 @@ benchmark benchmarks
 
     build-depends:
           base
-        , criterion   >= 1.0.0.2 && < 1.1
-        , text-casing
+        , criterion            >= 1.0.0.2 && < 1.1
+        , text-case-conversion
         , text
 
 test-suite tests
@@ -59,7 +61,7 @@ test-suite tests
 
     build-depends:
           base
-        , text-casing
-        , tasty       >= 0.8
-        , tasty-hunit >= 0.8
+        , text-case-conversion
+        , tasty                >= 0.8
+        , tasty-hunit          >= 0.8
         , text
