--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -1,7 +1,7 @@
-name:                  text-case-conversion
+name:                  text-manipulate
 version:               0.1.0
 synopsis:              Textual case conversion and word boundary manipulation
-homepage:              https://github.com/brendanhay/text-case-conversion
+homepage:              https://github.com/brendanhay/text-manipulate
 license:               OtherLicense
 license-file:          LICENSE
 author:                Brendan Hay
@@ -13,13 +13,13 @@ extra-source-files:    README.md
 cabal-version:         >= 1.10
 
 description:
-    Manipulate programmatic identifiers and structurally non-complex pieces
+    Manipulate identifiers and structurally non-complex pieces
     of text by delimiting word boundaries via a combination of whitespace,
     control-characters, and case-sensitivity.
 
 source-repository head
     type:     git
-    location: git://github.com/brendanhay/text-case-conversion.git
+    location: git://github.com/brendanhay/text-manipulate.git
 
 library
     default-language:  Haskell2010
@@ -27,12 +27,12 @@ library
     ghc-options:       -Wall
 
     exposed-modules:
-          Data.Text.Case
-        , Data.Text.Lazy.Case
+          Data.Text.Manipulate
+        , Data.Text.Lazy.Manipulate
 
     other-modules:
-          Data.Text.Case.Fusion
-        , Data.Text.Case.Types
+          Data.Text.Manipulate.Fusion
+        , Data.Text.Manipulate.Types
 
     build-depends:
           base        >= 4.5 && < 5.0
@@ -48,8 +48,8 @@ benchmark benchmarks
 
     build-depends:
           base
-        , criterion            >= 1.0.0.2 && < 1.1
-        , text-case-conversion
+        , criterion       >= 1.0.0.2 && < 1.1
+        , text-manipulate
         , text
 
 test-suite tests
@@ -61,7 +61,7 @@ test-suite tests
 
     build-depends:
           base
-        , text-case-conversion
-        , tasty                >= 0.8
-        , tasty-hunit          >= 0.8
+        , text-manipulate
+        , tasty           >= 0.8
+        , tasty-hunit     >= 0.8
         , text
