--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -16,6 +16,10 @@ description:
     Manipulate identifiers and structurally non-complex pieces
     of text by delimiting word boundaries via a combination of whitespace,
     control-characters, and case-sensitivity.
+    .
+    Has support for common idioms like casing of programmatic variable names,
+    taking, dropping, and splitting by words, and modifying the first character
+    of a piece of text.
 
 source-repository head
     type:     git
