--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -18,7 +18,7 @@ description:
     control-characters, and case-sensitivity.
     .
     Has support for common idioms like casing of programmatic variable names,
-    taking, dropping, and splitting by words, and modifying the first character
+    taking, dropping, and splitting by word, and modifying the first character
     of a piece of text.
 
 source-repository head
