--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -20,6 +20,11 @@ description:
     Has support for common idioms like casing of programmatic variable names,
     taking, dropping, and splitting by word, and modifying the first character
     of a piece of text.
+    .
+    /Caution:/ this library makes heavy use of the <http://hackage.haskell.org/package/text text>
+    library's internal loop optimisation framework. Since internal modules are not
+    guaranteed to have a stable API there is potential for build breakage when
+    the text dependency is upgraded. Consider yourself warned!
 
 source-repository head
     type:     git
