Moving Fusion + Types modules into Internal namespace to reflect their availability

--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -40,8 +40,8 @@ library
         , Data.Text.Lazy.Manipulate
 
     other-modules:
-          Data.Text.Manipulate.Fusion
-        , Data.Text.Manipulate.Types
+          Data.Text.Manipulate.Internal.Fusion
+        , Data.Text.Manipulate.Internal.Types
 
     build-depends:
           base        >= 4.5 && < 5.0
