Removing unnecessary criterion upper bound
Reference: fpco/stackage#494

--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -57,7 +57,7 @@ benchmark benchmarks
 
     build-depends:
           base
-        , criterion       >= 1.0.0.2 && < 1.1
+        , criterion       >= 1.0.0.2
         , text-manipulate
         , text
 
