--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -44,9 +44,8 @@ library
         , Data.Text.Manipulate.Internal.Types
 
     build-depends:
-          base        >= 4.5 && < 5.0
-        , text        >= 1.1 && < 1.3
-        , text-format >= 0.3
+          base >= 4.5
+        , text >= 1.1
 
 benchmark benchmarks
     type:              exitcode-stdio-1.0
