Re-adding base upper bound to keep Hackage happy

--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -44,7 +44,7 @@ library
         , Data.Text.Manipulate.Internal.Types
 
     build-depends:
-          base >= 4.5
+          base >= 4.5 && < 5
         , text >= 1.1
 
 benchmark benchmarks
