--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,41 @@
-# Haskell
-.conf
-*.o
-*.hi
-*.chi
-*.chs.h
-*.imports
-cabal.sandbox.config
-
-# Dirs
-.cabal-sandbox
-dist
-vendor
-
-# CTAGS
-TAGS
-tags
+# OSX
+.DS_Store
 
 # Emacs/Vim
 *~
 *#
 .#*
-\#*#
 .*.sw[a-z]
 *.un~
 *.org
+.projectile
 
-# OSX
-.DS_Store
+# Nix
+result*
 
-# Reports
-benchmark.html
+# Certificates
+*.pem
+*.key
+*.secret
+*.sec
+*.asc
+
+# Archives
+*.zip
+*.gz
+*.tar
+*.bzip2
+*.xz
+
+# Profiling
+*.prof
+*.aux
+*.hp
+*.ps
+*.pdf
+
+# Cabal
+/dist-newstyle
+dist*
+.ghc*
+cabal.project.local*
