--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -1,3 +1,4 @@
+cabal-version:      2.2
 name:               text-manipulate
 version:            0.3.0.0
 synopsis:
@@ -12,7 +13,6 @@ copyright:          Copyright (c) 2014-2020 Brendan Hay
 category:           Data, Text
 build-type:         Simple
 extra-source-files: README.md
-cabal-version:      2.0
 description:
   Manipulate identifiers and structurally non-complex pieces
   of text by delimiting word boundaries via a combination of whitespace,
@@ -31,10 +31,17 @@ source-repository head
   type:     git
   location: git://github.com/brendanhay/text-manipulate.git
 
-library
+common base
   default-language: Haskell2010
-  hs-source-dirs:   src
-  ghc-options:      -Wall
+  ghc-options:
+    -Wall -funbox-strict-fields -fwarn-incomplete-uni-patterns
+    -fwarn-incomplete-record-updates
+
+  build-depends:    base >=4.6 && <5
+
+library
+  import:          base
+  hs-source-dirs:  lib
   exposed-modules:
     Data.Text.Lazy.Manipulate
     Data.Text.Manipulate
@@ -43,30 +50,26 @@ library
     Data.Text.Manipulate.Internal.Fusion
     Data.Text.Manipulate.Internal.Types
 
-  build-depends:
-      base  >=4.12 && <5
-    , text  >=1.1
+  build-depends:   text >=1.1
 
 benchmark benchmarks
-  type:             exitcode-stdio-1.0
-  default-language: Haskell2010
-  main-is:          Main.hs
-  hs-source-dirs:   bench
-  ghc-options:      -Wall -O2 -threaded -with-rtsopts=-T
+  import:         base
+  type:           exitcode-stdio-1.0
+  main-is:        Main.hs
+  hs-source-dirs: bench
+  ghc-options:    -O2 -threaded -with-rtsopts=-T
   build-depends:
-      base             >=4.12    && <5
     , criterion        >=1.0.0.2
     , text
     , text-manipulate
 
 test-suite tests
-  type:             exitcode-stdio-1.0
-  default-language: Haskell2010
-  hs-source-dirs:   test
-  main-is:          Main.hs
-  ghc-options:      -Wall -threaded
+  import:         base
+  type:           exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is:        Main.hs
+  ghc-options:    -threaded
   build-depends:
-      base             >=4.12 && <5
     , tasty            >=0.8
     , tasty-hunit      >=0.8
     , text
