--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,7 @@
-eval "$(lorri direnv)"
+if ! has nix_direnv_version || ! nix_direnv_version 1.6.0; then
+  source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/1.6.0/direnvrc" "sha256-FqqbUyxL8MZdXe5LkMgtNo95raZFbegFpl5k2+PrCow="
+fi
+
+use flake
 
 PATH_add scripts
