--- a/text-manipulate.cabal
+++ b/text-manipulate.cabal
@@ -30,9 +30,9 @@ common base
   default-language: Haskell2010
   ghc-options:
     -Wall -funbox-strict-fields -fwarn-incomplete-uni-patterns
-    -fwarn-incomplete-record-updates
+    -fwarn-incomplete-record-updates -fwarn-unused-packages
 
-  build-depends:    base >=4.6 && <5
+  build-depends:    base >=4.12 && <5
 
 library
   import:          base
